--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script  defer src="index.js"></script>
-    <title>Patricks portfolio</title>
+    <title>Patrick's portfolio</title>
 </head>
 <body>
     <header>
-        <h1 id="portfolio-title">patrick kamau</h1>
+        <h1 id="portfolio-title">Patrick Kamau</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -20,19 +20,19 @@
     </header>
     
     <section id="about">
-        <h2>About Me</h2>
-        <p>led by ambition driven by passion</p>
-        <p>i have an indepth history with sales and also do art and furniture on the side</p>
+        <h2>About Me:</h2>
+        <p>Led by ambition driven by passion</p>
+        <p>I have an in-depth history with sales and also do art and furniture on the side</p>
     </section>
     
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>sales assistant at lumbar hardware store</h3>
-            <p>successfully implemented the use of digital sales equipment and closed circuit cirvailance for security</p>
+            <h3>Sales assistant at lumbar hardware store</h3>
+            <p>Where I successfully implemented the use of digital sales equipment and closed circuit surveillance for security</p>
         </div>
         <div class="project">
-            <h3>my art and furniture portfolio</h3>
+            <h3>My art and furniture portfolio</h3>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmhIJu09a2UJKnHSFPo3kvxbR_2hZ8ZvBolw&s" alt="first art piece">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkEs-UxfZ01OJBNo9pZS8uy1Ah5xCK-PwhFw&s" alt="second art piece">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYUq7orpsENaWEJ6Mu0lY0Q6ARixDH1lSYIw&s" alt="first funiture piece">
